@@ -10,6 +10,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/messages")
@@ -22,46 +23,46 @@ public class MessageController {
         this.messageService = messageService;
     }
 
-        // 메시지 전송
-        @PostMapping("/send")
-        public ResponseEntity<MessageResponse> sendMessage(@RequestBody MessageRequest messageRequest) {
-            Message message = messageService.sendMessage(
-                    messageRequest.getSenderId(),
-                    messageRequest.getReceiverId(),
-                    messageRequest.getContent()
-            );
-            return new ResponseEntity<>(new MessageResponse(message), HttpStatus.CREATED);
-        }
+    // 메시지 전송
+    @PostMapping("/send")
+    public ResponseEntity<MessageResponse> sendMessage(@RequestBody MessageRequest messageRequest) {
+        Message message = messageService.sendMessage(
+                messageRequest.getSenderNickname(),
+                messageRequest.getReceiverNickname(),
+                messageRequest.getContent()
+        );
+        return new ResponseEntity<>(new MessageResponse(message), HttpStatus.CREATED);
+    }
 
     // 받은 메시지 조회
-    @GetMapping("/received/{receiverId}")
-    public ResponseEntity<List<MessageResponse>> getReceivedMessages(@PathVariable String receiverId) {
-        List<Message> messages = messageService.getReceivedMessages(receiverId);
+    @GetMapping("/received/{receiverNickname}")
+    public ResponseEntity<List<MessageResponse>> getReceivedMessages(@PathVariable String receiverNickname) {
+        List<Message> messages = messageService.getReceivedMessages(receiverNickname);
         List<MessageResponse> response = messages.stream()
                 .map(MessageResponse::new)
-                .toList();
+                .collect(Collectors.toList());
         return new ResponseEntity<>(response, HttpStatus.OK);
     }
 
     // 보낸 메시지 조회
-    @GetMapping("/sent/{senderId}")
-    public ResponseEntity<List<MessageResponse>> getSentMessages(@PathVariable String senderId) {
-        List<Message> messages = messageService.getSentMessages(senderId);
+    @GetMapping("/sent/{senderNickname}")
+    public ResponseEntity<List<MessageResponse>> getSentMessages(@PathVariable String senderNickname) {
+        List<Message> messages = messageService.getSentMessages(senderNickname);
         List<MessageResponse> response = messages.stream()
                 .map(MessageResponse::new)
-                .toList();
+                .collect(Collectors.toList());
         return new ResponseEntity<>(response, HttpStatus.OK);
     }
 
     // 두 유저 간의 대화 조회
     @GetMapping("/conversation")
     public ResponseEntity<List<MessageResponse>> getConversation(
-            @RequestParam String userId1,
-            @RequestParam String userId2) {
-        List<Message> messages = messageService.getConversation(userId1, userId2);
+            @RequestParam String nickname1,
+            @RequestParam String nickname2) {
+        List<Message> messages = messageService.getConversation(nickname1, nickname2);
         List<MessageResponse> response = messages.stream()
                 .map(MessageResponse::new)
-                .toList();
+                .collect(Collectors.toList());
         return new ResponseEntity<>(response, HttpStatus.OK);
     }
 }
